hello/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: demo
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
